ADDING TASK 1 CRUD

--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@ Home
 		{% if error == 1 %}
 			<font color='red'>Invalid Credentials</font>
 		{% elif error == 2 %}
-			<font color='red'>DB Error</font>
+			<font color='red'>GET POST Error</font>
 		{% endif %}
 		<table>
 			<tr>
