--- a/templates/t1.html
+++ b/templates/t1.html
@@ -13,12 +13,12 @@ Home
 	<form action="/output" method="post">
 		<table>
 			<tr>
-				<td><a href="/c"><button>C</button></a></td>
-				<td><a href="/r"><button>R</button></a></td>
+				<td><a href="/c"><button>Create - ADD</button></a></td>
+				<td><a href="/r"><button>Read - GET</button></a></td>
 			</tr>
 			<tr>
-				<td><a href="/u"><button>U</button></a></td>
-				<td><a href="/d"><button>D</button></a></td>
+				<td><a href="/u"><button>Update - </button></a></td>
+				<td><a href="/d"><button>Drop - Delete</button></a></td>
 			</tr>
 		</table>
 	</form>
