Updated CRUD Task 1

--- a/templates/C.html
+++ b/templates/C.html
@@ -28,6 +28,7 @@ C
 				<td>timestamp</td>
 				<td><input type="text" name="timestamp" required></td>
 			</tr>
+			<input type="hidden" name="type" value="create">
 		</table>
 		<br><br>
 		<button>Feed to DB</button>
