Updated Registration and DB

--- a/templates/register.html
+++ b/templates/register.html
@@ -27,14 +27,114 @@ Sign-Up
 				<td><input type="password" name="password" required></td>
 			</tr>
 			<tr>
-				<td>Genre</td>
+				<td>Genre 1</td>
 				<td>
-					<select name="option">
-						<option value="Action">Action</option>
+					<select name="option1">
+						<option value="Action" selected>Action</option>
 						<option value="Adventure">Adventure</option>
 						<option value="Animation">Animation</option>
 						<option value="Children's">Children's</option>
 						<option value="Comedy">Comedy</option>
+						<option value="Crime">Crime</option>
+						<option value="Documentary">Documentary</option>
+						<option value="Drama">Drama</option>
+						<option value="Fantasy">Fantasy</option>
+						<option value="Film-Noir">Film-Noir</option>
+						<option value="Horror">Horror</option>
+						<option value="Musical">Musical</option>
+						<option value="Mystery">Mystery</option>
+						<option value="Romance">Romance</option>
+						<option value="Sci-Fi">Sci-Fi</option>
+						<option value="Thriller">Thriller</option>
+						<option value="War">War</option>
+						<option value="Western">Western</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Genre 2</td>
+				<td>
+					<select name="option2">
+						<option value="Action">Action</option>
+						<option value="Adventure" selected>Adventure</option>
+						<option value="Animation">Animation</option>
+						<option value="Children's">Children's</option>
+						<option value="Comedy">Comedy</option>
+						<option value="Crime">Crime</option>
+						<option value="Documentary">Documentary</option>
+						<option value="Drama">Drama</option>
+						<option value="Fantasy">Fantasy</option>
+						<option value="Film-Noir">Film-Noir</option>
+						<option value="Horror">Horror</option>
+						<option value="Musical">Musical</option>
+						<option value="Mystery">Mystery</option>
+						<option value="Romance">Romance</option>
+						<option value="Sci-Fi">Sci-Fi</option>
+						<option value="Thriller">Thriller</option>
+						<option value="War">War</option>
+						<option value="Western">Western</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Genre 3</td>
+				<td>
+					<select name="option3">
+						<option value="Action">Action</option>
+						<option value="Adventure">Adventure</option>
+						<option value="Animation" selected>Animation</option>
+						<option value="Children's">Children's</option>
+						<option value="Comedy">Comedy</option>
+						<option value="Crime">Crime</option>
+						<option value="Documentary">Documentary</option>
+						<option value="Drama">Drama</option>
+						<option value="Fantasy">Fantasy</option>
+						<option value="Film-Noir">Film-Noir</option>
+						<option value="Horror">Horror</option>
+						<option value="Musical">Musical</option>
+						<option value="Mystery">Mystery</option>
+						<option value="Romance">Romance</option>
+						<option value="Sci-Fi">Sci-Fi</option>
+						<option value="Thriller">Thriller</option>
+						<option value="War">War</option>
+						<option value="Western">Western</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Genre 4</td>
+				<td>
+					<select name="option4">
+						<option value="Action">Action</option>
+						<option value="Adventure">Adventure</option>
+						<option value="Animation">Animation</option>
+						<option value="Children's" selected>Children's</option>
+						<option value="Comedy">Comedy</option>
+						<option value="Crime">Crime</option>
+						<option value="Documentary">Documentary</option>
+						<option value="Drama">Drama</option>
+						<option value="Fantasy">Fantasy</option>
+						<option value="Film-Noir">Film-Noir</option>
+						<option value="Horror">Horror</option>
+						<option value="Musical">Musical</option>
+						<option value="Mystery">Mystery</option>
+						<option value="Romance">Romance</option>
+						<option value="Sci-Fi">Sci-Fi</option>
+						<option value="Thriller">Thriller</option>
+						<option value="War">War</option>
+						<option value="Western">Western</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Genre 5</td>
+				<td>
+					<select name="option5">
+						<option value="Action">Action</option>
+						<option value="Adventure">Adventure</option>
+						<option value="Animation">Animation</option>
+						<option value="Children's">Children's</option>
+						<option value="Comedy" selected>Comedy</option>
 						<option value="Crime">Crime</option>
 						<option value="Documentary">Documentary</option>
 						<option value="Drama">Drama</option>
