--- a/templates/U.html
+++ b/templates/U.html
@@ -6,12 +6,8 @@ Update
 
 {% block body %}
 <form action="/output" method="post">
-	<h2> Update your movie rating here </h2><br><br>
+	<h2> Update</h2><br><br>
 		<table>
-			<tr>
-				<td>Index</td>
-				<td><input type="text" name="index"></td>
-			</tr>
 			<tr>
 				<td>User ID</td>
 				<td><input type="text" name="user"></td>
